<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google LLC All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Name of the app in launcher. -->
    <string name="app_name">WearMouse</string>

    <!-- Prompt to wait for Bluetooth to turn on. -->
    <string name="please_wait">Please wait…</string>
    <!-- Generic text to indicate that a setting is disabled. Should be in all caps. -->
    <string name="generic_disabled">OFF</string>

    <!-- The title of the activity for managing paired bluetooth devices -->
    <string name="pref_bluetooth">Paired devices</string>
    <!-- The title of the category for unpaired bluetooth devices available to pair with. -->
    <string name="pref_bluetoothAvailable">Available devices</string>
    <!-- Title of the list item to be clicked on when the user wants to trigger a new bluetooth device discovery process. -->
    <string name="pref_bluetoothScan">Scan for nearby devices</string>
    <!-- Message to be shown during the bluetooth device discovery process. -->
    <string name="pref_bluetoothScan_scanning">Scanning for nearby devices…</string>
    <!-- Action to connect to a paired Bluetooth device. -->
    <string name="pref_bluetooth_connect">Connect</string>
    <!-- Action to disconnect from a connected paired Bluetooth device. -->
    <string name="pref_bluetooth_disconnect">Disconnect</string>
    <!-- Action to unpair a paired Bluetooth device. -->
    <string name="pref_bluetooth_unpair">Unpair</string>
    <!-- Action to select a connected paired Bluetooth device. -->
    <string name="pref_bluetooth_select">Select</string>
    <!-- Message which is shown on entering the bluetooth settings when bluetooth is enabling. -->
    <string name="pref_bluetooth_turningOn">Bluetooth turning on…</string>
    <!-- Message which is shown on entering the bluetooth settings when bluetooth is disabling. -->
    <string name="pref_bluetooth_turningOff">Bluetooth turning off…</string>
    <!-- The connection status of an unpaired remote bluetooth device. It means the device is available for pairing. -->
    <string name="pref_bluetooth_available">Available</string>
    <!-- The profile availability of the remote device. It means no shared profiles between the two devices. -->
    <string name="pref_bluetooth_unavailable">Unavailable</string>
    <!-- The connection status of a remote bluetooth device which is currently being paired with. -->
    <string name="pref_bluetooth_pairing">Pairing…</string>
    <!-- The connection status of a paired remote bluetooth device. -->
    <string name="pref_bluetooth_connecting">Connecting…</string>
    <!-- The connection status of a paired remote bluetooth device. -->
    <string name="pref_bluetooth_connected">Connected</string>
    <!-- The connection status of a paired remote bluetooth device. -->
    <string name="pref_bluetooth_disconnecting">Disconnecting…</string>
    <!-- The connection status of a paired remote bluetooth device. -->
    <string name="pref_bluetooth_disconnected">Disconnected</string>
    <!-- The ability to forget a shared bluetooth device. -->
    <string name="pref_bluetooth_forget">Forget</string>

    <!-- Name of the menu entry for the About dialog. -->
    <string name="pref_appAbout">About</string>
    <!-- Title of the button that shows the license. -->
    <string name="pref_about_openSource">Open source license</string>

    <!-- Title at the top of the input mode selection -->
    <string name="pref_mode_select">Input Mode</string>

    <!-- Title of the Mouse emulation mode -->
    <string name="pref_inputMouse">Mouse</string>

    <!-- Single-letter left button label -->
    <string name="left_button_label">L</string>
    <!-- Single-letter right button label -->
    <string name="right_button_label">R</string>
    <!-- Name of the extra option to click and hold the left mouse button -->
    <string name="click_and_hold">Left click and hold</string>
    <!-- Name of the extra option to click and hold the right mouse button -->
    <string name="right_click_hold">Right click and hold</string>
    <!-- Name of the extra option to click the middle mouse button -->
    <string name="middle_click">Middle click</string>
    <!-- Hint for the users about the way they can navigate in the mouse emulation mode (3 lines) -->
    <string name="tap_to_click">Wave your hand to move pointer\nTap button to click\nPull from the top to switch hand</string>
    <!-- Name of the left wrist mode (2 lines) -->
    <string name="mouse_hand_left">Left Hand\n(Watch is on the left wrist)</string>
    <!-- Name of the hand-held mode (2 lines) -->
    <string name="mouse_hand_center">Center\n(Watch is in your hand)</string>
    <!-- Name of the right wrist mode (2 lines) -->
    <string name="mouse_hand_right">Right Hand\n(Watch is on the right wrist)</string>

    <!-- Title of the Touchpad emulation mode -->
    <string name="pref_inputTouchpad">Touchpad</string>

    <!-- Title of the Keypad cursor emulation mode -->
    <string name="pref_inputCursor">Cursor keys</string>
    <!-- Hint for the user to learn about the keypad mode interaction -->
    <string name="keypad_hint">Double tap: Enter key\nLong press: Exit keypad mode\nSwipe from center for extra keys</string>
    <!-- Name of the Escape key -->
    <string name="key_name_escape">Escape</string>
    <!-- Name of the Backspace key -->
    <string name="key_name_backspace">Backspace</string>
    <!-- Name of the Tab key -->
    <string name="key_name_tab">Tab</string>
    <!-- Name of the Space key -->
    <string name="key_name_space">Space</string>

    <!-- Title of the Keyboard text input emulation mode -->
    <string name="pref_inputKeyboard">Keyboard input</string>

    <!-- Title at the top of settings view -->
    <string name="pref_inputSettings">Settings</string>

    <!-- Name of the preference for gyroscope calibration [CHAR_LIMIT=40] -->
    <string name="pref_settingCalibration">Calibrate sensors</string>
    <!-- Description of the preference for gyroscope calibration [CHAR_LIMIT=80] -->
    <string name="pref_settingCalibration_summary">Use this option if the mouse pointer is drifting</string>
    <!-- Name of the preference for gyroscope re-calibration [CHAR_LIMIT=40] -->
    <string name="setting_recalibrate">Recalibrate sensors</string>
    <!-- Prompt for the user to wait while the gyroscope calibration is running [CHAR_LIMIT=24] -->
    <string name="setting_calibration_running">Calibrating\u2026</string>
    <!-- Name of the preference for stabilizing mouse pointer movements -->
    <string name="pref_settingStabilize">Stabilize pointer movements</string>
    <!-- Description of the preference for stabilizing mouse pointer movements -->
    <string name="pref_settingStabilize_summary">Makes it easier to point at small targets</string>
    <!-- Name of the preference for enabling 8-way keypad instead of 4-way -->
    <string name="pref_settingCursor8Way">8-directional cursor</string>
    <!-- Description of the preference for enabling 8-way keypad instead of 4-way -->
    <string name="pref_settingCursor8Way_summary">Allow diagonal movements in the keypad mode</string>
    <!-- Name of the preference for reducing the mouse data rate -->
    <string name="pref_settingReducedRate">Reduce data rate to 50 Hz</string>
    <!-- Description of the preference for reducing the mouse data rate -->
    <string name="pref_settingReducedRate_summary">Enable this if the mouse pointer can\'t keep up with motion</string>
    <!-- Name of the preference for keeping the device connection in the background -->
    <string name="pref_settingStayConnected">Stay connected in the background</string>
    <!-- Description of the preference for keeping the device connection in the background -->
    <string name="pref_settingStayConnected_summary">Keep device connection active while the app is minimized</string>
    <!-- Name of the preference that allows you to go through all tutorials once again -->
    <string name="pref_settingReplayTutorials">Repeat all tutorials</string>
    <!-- Description of the preference that allows you to go through all tutorials once again -->
    <string name="pref_settingReplayTutorials_summary">Show help screens for every mode once again when you enter them</string>

    <!-- Tutorial text for the first launch of the application -->
    <string name="onboarding_message_welcome">Use your Wear OS smartwatch as a Bluetooth mouse or keyboard; start by pairing to another device.</string>
    <!-- Tutorial text for the mouse mode -->
    <string name="onboarding_message_mouse">Move your Wear OS device to move the mouse pointer on the screen.</string>
    <!-- Tutorial text for the cursor keys mode -->
    <string name="onboarding_message_keypad">Tap on the sides of the Wear OS device\'s screen to press arrow keys.</string>
    <!-- Tutorial text for the calibration process [CHAR_LIMIT=300] -->
    <string name="onboarding_message_calibration">Place your Wear OS device on a solid, level surface and make sure it is completely still.</string>
</resources>
