<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2018 Google LLC All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/pref_mode_select">
    <Preference
        android:key="pref_inputMouse"
        android:title="@string/pref_inputMouse"
        android:icon="@drawable/ic_ms_mouse"
        android:persistent="false" />
    <Preference
        android:key="pref_inputCursor"
        android:title="@string/pref_inputCursor"
        android:icon="@drawable/ic_ms_keypad"
        android:persistent="false" />
    <Preference
        android:key="pref_inputKeyboard"
        android:title="@string/pref_inputKeyboard"
        android:icon="@drawable/ic_ms_keyboard"
        android:persistent="false" />
    <Preference
        android:fragment="com.ginkage.wearmouse.ui.input.InputSettingsFragment"
        android:title="@string/pref_inputSettings"
        android:icon="@drawable/ic_bt_ellipsis"
        android:persistent="false" />
</PreferenceScreen>
